--- a/package.json
+++ b/package.json
@@ -1,38 +1,31 @@
 {
-  "name": "pineladsn.github.io",
+  "name": "github-io",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Bruno Pinela portfolio",
+  "main": "main.js",
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "watch": "webpack-dev-server --mode development --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pineladsn/pineladsn.github.io.git"
+    "watch": "webpack-dev-server --mode development --open"
   },
   "author": "pineladsn",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pineladsn/pineladsn.github.io/issues"
+  "license": "MIT",
+  "dependencies": {
+    "materialize-css": "^1.0.0-rc.2"
   },
-  "homepage": "https://github.com/pineladsn/pineladsn.github.io#readme",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
-    "pug": "^2.0.3",
     "pug-html-loader": "^1.1.5",
     "sass-loader": "^8.0.0",
-    "webpack": "^4.41.0",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "webpack-dev-server": "^3.8.2"
   }
 }
