--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "export": "next export",
+    "lint": "next lint",
     "prettier": "prettier --write .",
     "prepare": "husky install"
   },
@@ -20,12 +20,19 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.0-rc.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "babel-plugin-styled-components": "^2.1.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
