build: update eslint/prettier and commitlint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,7 @@
 {
-  "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
+  "extends": ["next/core-web-vitals", "prettier"],
   "plugins": ["prettier"],
-  "globals": {
-    "React": "readonly"
-  },
   "rules": {
-    "no-unused-vars": [0, { "args": "after-used", "argsIgnorePattern": "^_" }]
+    "no-console": "warn"
   }
 }
