--- a/package.json
+++ b/package.json
@@ -27,12 +27,10 @@
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "babel-plugin-styled-components": "^2.1.3",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8"
-  },
-  "resolutions": {
-    "styled-components": "^5"
   }
 }
